--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "ilpv4-testnet-faucet-fuzio",
-  "version": "0.1.0",
+  "name": "ilpv4-testnet-faucet",
+  "homepage": "https://faucet.ilpv4.dev",
+  "version": "0.2.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.13.0",
