--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.7",
     "classnames": "^2.3.1",
-    "gh-pages": "^3.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-loader-spinner": "^4.0.0",
@@ -29,6 +28,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
@@ -51,6 +51,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
+    "gh-pages": "^3.2.1",
     "postcss": "^8.3.1",
     "postcss-cli": "^8.3.1",
     "tailwindcss": "^2.1.4"
