--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
@@ -50,6 +51,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
+    "gh-pages": "^3.2.1",
     "postcss": "^8.3.1",
     "postcss-cli": "^8.3.1",
     "tailwindcss": "^2.1.4"
