--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
-    "gh-pages": "^3.2.1",
+    "gh-pages": "3.2.0",
     "postcss": "^8.3.1",
     "postcss-cli": "^8.3.1",
     "tailwindcss": "^2.1.4"
